Add dispatch script and integrate into build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,7 @@ jobs:
 
       - name: View Output
         run: cat output.json
+
+      - name: Execute Dispatch
+        working-directory: .
+        run: .github/scripts/dispatch.sh
