--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,5 @@ jobs:
       - name: Execute Dispatch
         working-directory: .
         run: .github/scripts/dispatch.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}  # Custom PAT
