Enhance build workflow: add GitHub authentication step before dispatch execution; update flow documentation inputs to include repository and output branch details

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Execute Dispatch
         working-directory: .
-        run: .github/scripts/dispatch.sh
+        run: |
+          gh auth login --with-token $GITHUB_TOKEN
+          .github/scripts/dispatch.sh
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}  # Custom PAT
