--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,22 +25,18 @@ jobs:
       - name: View Output
         run: cat output.json
 
-      - name: 🔑 Setup GitHub CLI authentication
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          # Write token to a temporary file
-          echo "$GITHUB_TOKEN" > /tmp/gh_token.txt
-          
-          # Authenticate using the token file
-          gh auth login --with-token < /tmp/gh_token.txt
-          
-          # Verify authentication
-          gh auth status
-          
-          # Clean up the token file for security
-          rm -f /tmp/gh_token.txt
-
       - name: Execute Dispatch
         working-directory: .
-        run: .github/scripts/dispatch.sh
+        run: |
+          unset GITHUB_TOKEN
+
+          # One-liner: write token and authenticate
+          echo "$PAT_TOKEN" | gh auth login --with-token
+          
+          # Verify
+          gh auth status
+
+          # Execute the dispatch script
+          .github/scripts/dispatch.sh
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}  # Custom PAT
