Rename workflows: update documentation_flow and documentation_proxy names for consistency

--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -1,4 +1,4 @@
-name: Flow Documentation
+name: documentation.flow
 
 run-name: >-
   [${{ github.event.client_payload.job_key }}] Flow Documentation
