--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -48,3 +48,13 @@ jobs:
         run: |
           git clone ${{ env.PARAM_REPO }} -b ${{ env.PARAM_BRANCH }} ./.tmp
           ls -la ./.tmp
+
+      - name: Generate Prompt for Flow Documentation
+        run: |
+          # Iterate over the input array for the specific job
+          jq -r --arg job_key "$PARAM_JOB_KEY" '.jobs[] | select(.key == $job_key) | .input[]' documentation.json | while read -r file; do
+              echo "Processing file: $file"
+              # Your processing logic here
+          done
+        env:
+          PARAM_JOB_KEY: ${{ env.PARAM_JOB_KEY }} 
