--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -83,21 +83,26 @@ jobs:
               fi
 
               # Append to variables (these will now persist!)
-              previous_prompt+="<file name=\"$file\" version=\"previous\">"$'\n'"$previous_content"$'\n'"</file>"$'\n'$'\n'
-              current_prompt+="<file name=\"$file\" version=\"current\">"$'\n'"$current_content"$'\n'"</file>"$'\n'$'\n'
+              previous_prompt+="=== [START] FILE: $file VERSION: previous ==="$'\n'"$previous_content"$'\n'"=== [END] FILE ==="$'\n'$'\n'
+              current_prompt+="=== [START] FILE: $file VERSION: current ==="$'\n'"$current_content"$'\n'"=== [END] FILE ==="$'\n'$'\n'
 
           done < <(jq -r --arg job_key "$PARAM_JOB_KEY" '.jobs[] | select(.key == $job_key) | .input[]' documentation.json)
 
           # Now the variables will have content
-          echo -e "\nprevious_prompt:\n----------------------\n$previous_prompt\n----------------------\n"
-          echo -e "\ncurrent_prompt:\n----------------------\n$current_prompt\n----------------------\n"
+          #echo -e "\nprevious_prompt:\n----------------------\n$previous_prompt\n----------------------\n"
+          #echo -e "\ncurrent_prompt:\n----------------------\n$current_prompt\n----------------------\n"
 
           # Combine into final prompt
-          PROMPT="${PROMPT//\${previous}/$previous_prompt}"
-          PROMPT="${PROMPT//\${current}/$current_prompt}"
+          PROMPT="${PROMPT//\{\!previous\}/$previous_prompt}"
+          PROMPT="${PROMPT//\{\!current\}/$current_prompt}"
 
-          echo "\nFinal Prompt:\n----------------------\n$PROMPT\n----------------------\n"
-          echo "PROMPT=$PROMPT" >> $GITHUB_ENV
+          echo -e "\nFinal Prompt:\n----------------------\n$PROMPT\n----------------------\n"
+
+          {
+            echo "PROMPT<<EOF"
+            echo "$PROMPT"
+            echo "EOF"
+          } >> $GITHUB_ENV
 
         env:
           PROMPT: ${{ vars.PROMPT_FLOW }}
