--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -115,19 +115,19 @@ jobs:
           # Escape the prompt for JSON
           ESCAPED_PROMPT=$(printf '%s' "$PROMPT" | jq -Rs .)
 
-          RESPONSE=$(curl https://api.anthropic.com/v1/messages \
+          RESPONSE=$(curl -s https://api.anthropic.com/v1/messages \
             -H "Content-Type: application/json" \
             -H "x-api-key: $ANTHROPIC_API_KEY" \
-            -d '{
+            -d "$(jq -n --arg prompt "$PROMPT" '{
               "model": "claude-sonnet-4-20250514",
               "max_tokens": 1000,
               "messages": [
                 {
                   "role": "user",
-                  "content": '$ESCAPED_PROMPT'
+                  "content": $prompt
                 }
               ]
-            }')
+            }')")
 
             echo "$RESPONSE"
         env:
