--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -136,9 +136,15 @@ jobs:
           documentation=$(jq -r --arg key "$PARAM_JOB_KEY" '.jobs[] | select(.key == $key) | .documentation' documentation.json)
           echo "Updating documentation file: $documentation"
 
-          # Write file.
-          echo "$RESPONSE" | jq -r '.content[0].text' > "./.tmp/$documentation"
-          echo "Documentation updated successfully."
+          # Extract the text content from the response
+          DATA=$(echo "$RESPONSE" | jq -r '.content[0].text')
+
+          # Extract JSON from code blocks
+          CLEAN_DATA=$(echo "$DATA" | sed -n '/```json/,/```/p' | sed '1d;$d')
+
+          # Then parse it
+          echo "$CLEAN_DATA" | jq -r '.summary' > summary.txt
+          echo "$CLEAN_DATA" | jq -r '.file' > "./.tmp/$documentation"
 
           echo "Generated Documentation Content:"
           cat "./.tmp/$documentation"
@@ -172,7 +178,7 @@ jobs:
 
           # Create Pull Request using gh CLI
           gh auth login --with-token <<< ${{ secrets.PAT_TOKEN }}
-          gh pr create --title "$COMMIT_MESSAGE" --body "This PR updates the documentation for the flow associated with job key: ${{ env.PARAM_JOB_KEY }}." --head $BRANCH_NAME --base ${{ env.PARAM_BRANCH }}
+          gh pr create --title "$COMMIT_MESSAGE" --body "$(cat ../summary.txt)" --head $BRANCH_NAME --base ${{ env.PARAM_BRANCH }}
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
           PARAM_JOB_KEY: ${{ env.PARAM_JOB_KEY }}
