Enhance documentation flow: add summary output and confirmation of documentation update

--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -163,6 +163,12 @@ jobs:
 
           rm temp.json
 
+          echo "\nSummary:"
+          cat summary.txt
+          echo ""
+          echo "Documentation updated at ./.tmp/$documentation"
+          cat "./.tmp/$documentation"
+
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           PROMPT: ${{ env.PROMPT }}
